Se modifico formulario de contacto para vincular con Netlify

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
             <h2 class="pb-2 border-bottom text-center">¿Qué Aprenderas?</h2>
             <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
                 <div class="feature col text-center">
-                    <img class="img-fluid p-3 iconoPortada" src="imagenes/iconos/fermentacion.png" alt=" icono fermentacion">
+                    <img class="img-fluid p-3 iconoPortada" src="imagenes/iconos/fermentacion.png"
+                        alt=" icono fermentacion">
                     <div class="separadorInicio">
                     </div>
                     <h2 class="text-center">Masa con Fermentacion de 72 horas</h2>
@@ -107,7 +108,8 @@
                         realiza correctamente para que esos bordes salgan bien aireados y llenos de sabor.</p>
                 </div>
                 <div class="feature col text-center">
-                    <img class="img-fluid p-3 iconoPortada" src="imagenes/iconos/margarita.png" alt="icono pizza margarita">
+                    <img class="img-fluid p-3 iconoPortada" src="imagenes/iconos/margarita.png"
+                        alt="icono pizza margarita">
                     <div class="separadorInicio">
                     </div>
                     <h2 class="text-center">Receta Tradicional</h2>
