--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explora nuestras deliciosas recetas de pizza napolitana en Pizza Fan. Aprende técnicas auténticas para estirar la masa, preparar la salsa perfecta y crear la icónica Pizza Margarita. Descubre los secretos de la cocina italiana y conviértete en un maestro pizzero en casa. ¡Sigue nuestras recetas paso a paso y disfruta de auténticos sabores italianos!">
+    <meta name="description"
+        content="Explora nuestras deliciosas recetas de pizza napolitana en Pizza Fan. Aprende técnicas auténticas para estirar la masa, preparar la salsa perfecta y crear la icónica Pizza Margarita. Descubre los secretos de la cocina italiana y conviértete en un maestro pizzero en casa. ¡Sigue nuestras recetas paso a paso y disfruta de auténticos sabores italianos!">
     <title>Recetas Auténticas de Pizza Napolitana | Pizza Fan</title>
     <link rel="shortcut icon" href="../imagenes/favicon.png" type="image/x-icon">
     <!-- BOOTSTRAP -->
@@ -15,10 +16,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../css/estilo.css">
     <!-- ANIMACIONES -->
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
 </head>
 
@@ -28,7 +26,7 @@
         <nav class="container-fluid navbar navbar-expand-lg">
             <div class="container-fluid flex-row justify-content-around">
                 <div class="d-flex flex-column text-center">
-<!-- MENU HAMBURGESA MOBILE -->
+                    <!-- MENU HAMBURGESA MOBILE -->
                     <label class="fuenteMenuIconoMobile navbar-toggler ps-2">MENÚ</label>
                     <button class="iconoMenuMobile navbar-toggler px-3" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -55,9 +53,10 @@
         </nav>
 
     </header>
-<!-- SECCION RECETAS -->
+    <!-- SECCION RECETAS -->
     <main>
-        <h1 class="mb-5 text-center animate__animated animate__fadeInUp">LA RECETA PERFECTA PARA TU PIZZA NAPOLITANA</h1>
+        <h1 class="mb-5 text-center animate__animated animate__fadeInUp">LA RECETA PERFECTA PARA TU PIZZA NAPOLITANA
+        </h1>
     </main>
 
     <section class="container mb-2">
@@ -189,7 +188,7 @@
 
     </section>
 
-<!-- FOOTER -->
+    <!-- FOOTER -->
     <footer class="d-flex flex-column">
 
         <div class="contenedorSeguinos container-fluid pb-3 pt-2 d-flex flex-column justify-content-center">
@@ -212,7 +211,7 @@
         <p class="derechos container-fluid m-0 p-2 text-center">PizzaFan.Ar 2023 - Todos los Derechos Reservados</p>
 
     </footer>
-<!-- SCRIPT BOOTSTRAP -->
+    <!-- SCRIPT BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
