se modifico formulario

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -73,13 +73,13 @@
                 <form method="post" name="formularioDeContacto" netlify class="d-flex flex-column text-center">
 
                     <label for="Nombre">Nombre</label>
-                    <input class="formContacto" id="nombre" type="text">
+                    <input class="formContacto" id="nombre" name="Nombre" type="text">
 
                     <label for="Apellido">Apellido</label>
-                    <input class="formContacto" id="apellido" type="text">
+                    <input class="formContacto" id="apellido" name="Apellido" type="text">
 
                     <label for="Mensaje">Mensaje</label>
-                    <textarea class="formContactoTexto" id="mensaje" cols="30" rows="10"></textarea>
+                    <textarea class="formContactoTexto" id="mensaje" name="Mensaje" cols="30" rows="10"></textarea>
 
                     <button class="botonEnviar mb-5" type="submit" id="enviar"><img src="../imagenes/contacto/bx-mail-send.svg"
                             alt="Icono de Carta">ENVIAR</button>
