se suben correciones de formato

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -81,8 +81,8 @@
                     <label for="Mensaje">Mensaje</label>
                     <textarea class="formContactoTexto" id="mensaje" name="Mensaje" cols="30" rows="10"></textarea>
 
-                    <button class="botonEnviar mb-5" type="submit" id="enviar"><img src="../imagenes/contacto/bx-mail-send.svg"
-                            alt="Icono de Carta">ENVIAR</button>
+                    <button class="botonEnviar mb-5" type="submit" id="enviar"><img
+                            src="../imagenes/contacto/bx-mail-send.svg" alt="Icono de Carta">ENVIAR</button>
 
                 </form>
 
