correccion de errores de ortografia en index

--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
 
     <section class="animate__animated animate__fadeInUp">
         <div class="container px-4 py-5">
-            <h2 class="pb-2 border-bottom text-center">¿Qué Aprenderas?</h2>
+            <h2 class="pb-2 border-bottom text-center">¿Qué Aprenderás?</h2>
             <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
                 <div class="feature col text-center">
                     <img class="img-fluid p-3 iconoPortada" src="imagenes/iconos/fermentacion.png"
                         alt=" icono fermentacion">
                     <div class="separadorInicio">
                     </div>
-                    <h2 class="text-center">Masa con Fermentacion de 72 horas</h2>
+                    <h2 class="text-center">Masa con Fermentación de 72 horas</h2>
                     <p>Aprenderás a realizar un pre-fermento de origen italiano para que tu masa salga fragante, rica y
                         que además sea super digestible para tu estómago.</p>
                 </div>
